# DecommissioningContest_NITIC2023

./: CMakeLists.txt  package.xml
config/: gmapping.yaml  point_livox.yaml
launch/: cam.launch  fast_lio.launch  lio_sam.launch  servo.launch  torque_off.launch
msg/: GetServo.msg
rviz/: livox.rviz
src/: cable_reel_control.cpp  merge_clouds.cpp  merge_livox_msg.cpp  poler_control.cpp  servo_node.cpp  torque_off.cpp
urdf/: robot_model.urdf
